[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ObjectGallery.gd" type="Script" id=2]
[ext_resource path="res://Scenes/RoomGallery.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Protagonist.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Server.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Map(1,1).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Map(2,2).png" type="Texture" id=7]
[ext_resource path="res://Sprites/Map(2,1).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Map(1,2).png" type="Texture" id=9]
[ext_resource path="res://Scenes/NPCGallery.gd" type="Script" id=10]
[ext_resource path="res://Scenes/WorldDescription.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Label_Turn.gd" type="Script" id=12]
[ext_resource path="res://Scenes/EventManager.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Text_Animations.gd" type="Script" id=14]
[ext_resource path="res://Sounds/03 Human heartbeat (almost 70 bpm).wav" type="AudioStream" id=15]
[ext_resource path="res://Scenes/Tutorial.gd" type="Script" id=16]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Noises.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "2 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "1 2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "1 1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "2 2",
"speed": 5.0
} ]

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="ObjectGallery" type="Node" parent="."]
script = ExtResource( 2 )

[node name="NPCGallery" type="Node" parent="."]
script = ExtResource( 10 )

[node name="RoomGallery" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Server" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Protagonist" parent="." instance=ExtResource( 4 )]

[node name="Map" type="AnimatedSprite" parent="."]
position = Vector2( 1144.45, 143.838 )
frames = SubResource( 1 )
animation = "2 2"

[node name="Label_Map" type="Label" parent="."]
margin_left = 1099.9
margin_top = 75.665
margin_right = 1139.9
margin_bottom = 89.665
text = "MAP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Result" type="RichTextLabel" parent="."]
margin_left = 119.0
margin_top = 342.904
margin_right = 960.0
margin_bottom = 390.904
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldDescription" type="RichTextLabel" parent="."]
margin_left = 119.0
margin_top = 397.0
margin_right = 961.0
margin_bottom = 449.0
bbcode_enabled = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Turn" type="Label" parent="."]
margin_left = 574.8
margin_top = 39.2659
margin_right = 706.8
margin_bottom = 71.2659
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventManager" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Label_Event" type="RichTextLabel" parent="EventManager"]
margin_left = 120.0
margin_top = 455.0
margin_right = 960.0
margin_bottom = 508.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDescription" type="RichTextLabel" parent="."]
margin_left = 116.432
margin_top = 274.592
margin_right = 956.432
margin_bottom = 331.592
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_Animations" type="Node" parent="."]
script = ExtResource( 14 )

[node name="Sound_HB" type="AudioStreamPlayer" parent="Text_Animations"]
stream = ExtResource( 15 )

[node name="Tutorial" type="Node" parent="."]
script = ExtResource( 16 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="Node" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource( 18 )]
position = Vector2( 0.153015, -0.139893 )

[node name="Noises" type="Node" parent="."]
script = ExtResource( 19 )
